[package]
name = "disciplinator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "disciplinator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-mode = []


[dependencies]
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }